--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,25 +4,25 @@
       "path": "force-app/package",
       "default": true,
       "package": "Lightweight - LWC Util",
-      "versionName": "v60.0 - 0.6",
-      "versionNumber": "0.6.0.NEXT",
-      "ancestorVersion": "0.5.0",
+      "versionName": "v62.0 - 0.7",
+      "versionNumber": "0.7.0.NEXT",
+      "ancestorVersion": "0.6.0",
       "versionDescription": "A lightweight set of Lightning Web Component Utilities"
     },
     {
       "path": "force-app/package",
       "default": false,
       "package": "Lightweight - LWC Util (Unlocked)",
-      "versionName": "v60.0 - 0.6",
-      "versionNumber": "0.6.0.NEXT",
-      "ancestorVersion": "0.4.0",
+      "versionName": "v62.0 - 0.7",
+      "versionNumber": "0.7.0.NEXT",
+      "ancestorVersion": "0.6.0",
       "versionDescription": "A lightweight set of Lightning Web Component Utilities"
     }
   ],
   "name": "lightweight-lwc-util",
   "namespace": "utl",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "60.0",
+  "sourceApiVersion": "62.0",
   "packageAliases": {
     "Lightweight - LWC Util": "0HoP300000000WHKAY",
     "Lightweight - LWC Util@0.1.0-3": "04tP3000000O4TtIAK",
@@ -32,11 +32,13 @@
     "Lightweight - LWC Util@0.4.0-2": "04tP3000000SkG1IAK",
     "Lightweight - LWC Util@0.5.0-1": "04tP3000000T7J3IAK",
     "Lightweight - LWC Util@0.6.0-1": "04tP3000000T7ZBIA0",
+    "Lightweight - LWC Util@0.7.0-1": "04tP3000000t8rNIAQ",
     "Lightweight - LWC Util (Unlocked)": "0HoP300000000XtKAI",
     "Lightweight - LWC Util (Unlocked)@0.1.0-1": "04tP3000000O5MjIAK",
     "Lightweight - LWC Util (Unlocked)@0.2.0-1": "04tP3000000QnebIAC",
     "Lightweight - LWC Util (Unlocked)@0.3.0-1": "04tP3000000R7GjIAK",
     "Lightweight - LWC Util (Unlocked)@0.4.0-1": "04tP3000000SkHdIAK",
-    "Lightweight - LWC Util (Unlocked)@0.6.0-1": "04tP3000000T7cPIAS"
+    "Lightweight - LWC Util (Unlocked)@0.6.0-1": "04tP3000000T7cPIAS",
+    "Lightweight - LWC Util (Unlocked)@0.7.0-1": "04tP3000000t94HIAQ"
   }
 }
