--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
       "path": "force-app/package",
       "default": true,
       "package": "Lightweight - LWC Util",
-      "versionName": "v62.0 - 0.8",
-      "versionNumber": "0.8.0.NEXT",
+      "versionName": "v62.0 - 0.9",
+      "versionNumber": "0.9.0.NEXT",
       "ancestorVersion": "HIGHEST",
       "versionDescription": "A lightweight set of Lightning Web Component Utilities"
     },
@@ -13,8 +13,8 @@
       "path": "force-app/package",
       "default": false,
       "package": "Lightweight - LWC Util (Unlocked)",
-      "versionName": "v62.0 - 0.8",
-      "versionNumber": "0.8.0.NEXT",
+      "versionName": "v62.0 - 0.9",
+      "versionNumber": "0.9.0.NEXT",
       "ancestorVersion": "HIGHEST",
       "versionDescription": "A lightweight set of Lightning Web Component Utilities"
     }
@@ -40,6 +40,7 @@
     "Lightweight - LWC Util (Unlocked)@0.4.0-1": "04tP3000000SkHdIAK",
     "Lightweight - LWC Util (Unlocked)@0.6.0-1": "04tP3000000T7cPIAS",
     "Lightweight - LWC Util (Unlocked)@0.7.0-1": "04tP3000000t94HIAQ",
-    "Lightweight - LWC Util (Unlocked)@0.8.0-1": "04tP3000000wL2TIAU"
+    "Lightweight - LWC Util (Unlocked)@0.8.0-1": "04tP3000000wL2TIAU",
+    "Lightweight - LWC Util (Unlocked)@0.9.0-1": "04tP30000012SxJIAU"
   }
 }
